# lfs_longitudinal_controller

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
controller_ws/: Bspline_velocity_profile_analysis.csv  plot_curv.py  plot_profile.py  plot_spline_debug.py  plot_velocity_profile.ipynb  spline_debug.csv  v_profile.csv  velocity_profile.csv
controller_ws/bike_test_bag/: bike_test_bag_0.db3  metadata.yaml
controller_ws/pid_tuning_data/: metadata.yaml  pid_tuning_data_0.db3
controller_ws/src/controller/: CMakeLists.txt  package.xml
controller_ws/src/controller/config/: config.yaml
controller_ws/src/controller/launch/: pid.launch.py
controller_ws/src/controller/src/: PID.cpp  PID.h  long_controller.cpp  long_controller.h  main.cpp  utils.cpp  utils.h
controller_ws/src/lfs_msgs/: CMakeLists.txt  package.xml
controller_ws/src/lfs_msgs/msg/: BikeState.msg  ControlDebug.msg  ProfileDebug.msg
controller_ws/src/sim/: CMakeLists.txt  package.xml
controller_ws/src/sim/launch/: sim.launch.py
controller_ws/src/sim/src/: bike_model.hpp  sim.cpp
controller_ws/src/spline_library/splines/: generic_b_spline.h
controller_ws/src/spline_library/utils/: arclength.h  splineinverter.h
controller_ws/src/track_srv/: CMakeLists.txt  package.xml
controller_ws/src/track_srv/src/: return_track.cpp
controller_ws/src/track_srv/srv/: ReturnTrack.srv
controller_ws/tracks/: FSG2023.track
controller_ws/turn_debug/: metadata.yaml  turn_debug_0.mcap
controller_ws/turn_debug_ff/: metadata.yaml  turn_debug_ff_0.mcap
controller_ws/turn_debug_pid/: metadata.yaml  turn_debug_pid_0.mcap
