<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_node</name>
  <version>0.0.0</version>
  <description>Simulator</description>
  <maintainer email="tommasobatori@gmail.com">Tommaso Batori</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lfs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>track_srv</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>visualization_msgs</depend>
  <!-- <depend>eigen</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
